Name:          continue
Version:       0.1.0
Category:      Continuation-based user interaction monad
Synopsis:      Control
Maintainer:    Ertugrul Söylemez <es@ertes.de>
Author:        Ertugrul Söylemez <es@ertes.de>
Copyright:     (c) 2012 Ertugrul Söylemez
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Stability:     experimental
Cabal-version: >= 1.10
Description:
    This library implements a monad transformer for suspendable
    computations, similar and related to free comonads.  It allows to
    write continuation-based web frameworks, command line applications
    and similar interfaces.

Library
    Build-depends:
        base              >= 4.5 && < 5,
        bifunctors        >= 3.0 && < 4,
        monad-control     >= 0.3 && < 1,
        mtl               >= 2.0 && < 3,
        semigroupoids     >= 3.0 && < 4,
        transformers-base >= 0.4 && < 1
    Default-language: Haskell2010
    Default-extensions:
        FlexibleInstances
        MultiParamTypeClasses
        TypeFamilies
    Other-extensions:
        UndecidableInstances
    GHC-Options: -W
    Exposed-modules:
        Control.Continue
        Control.Continue.Suspend
        Control.Continue.Types

Test-suite continue-test
    Type: exitcode-stdio-1.0
    Build-depends:
        base >= 4.5 && < 5,
        containers,
        continue,
        happstack-server,
        monad-control,
        mtl,
        transformers-base
    Default-language: Haskell2010
    Default-extensions:
        FlexibleInstances
        GeneralizedNewtypeDeriving
        MultiParamTypeClasses
        StandaloneDeriving
        TemplateHaskell
        TypeFamilies
        UndecidableInstances
    GHC-Options: -threaded -rtsopts
    Hs-source-dirs: test
    Main-is: Main.hs
